Name of a player in position displayed in label