@@ -1,5 +1,7 @@
 package git.jd499.fmsquadbuilder;
 
+import static git.jd499.fmsquadbuilder.Constants.*;
+
 import java.io.File;
 import java.io.IOException;
 import java.util.*;
@@ -8,16 +10,11 @@ import javafx.application.Application;
 import javafx.event.ActionEvent;
 import javafx.event.EventHandler;
 import javafx.geometry.Insets;
-
 import javafx.scene.Scene;
-import javafx.scene.control.Alert;
 import javafx.scene.control.Button;
 import javafx.scene.control.ComboBox;
 import javafx.scene.control.Label;
 import javafx.scene.effect.DropShadow;
-
-import javafx.scene.input.MouseEvent;
-
 import javafx.scene.layout.*;
 import javafx.scene.paint.Color;
 import javafx.scene.shape.Circle;
@@ -27,16 +24,14 @@ import javafx.scene.text.Font;
 import javafx.stage.FileChooser;
 import javafx.stage.Stage;
 
-import static git.jd499.fmsquadbuilder.Constants.*;
-
 public class SquadBuilder extends Application {
   private static final DropShadow shadow = Constants.SHADOW_EFFECT;
   private final Map<Circle, List<String>> circleToRolesMap = new HashMap<>();
+  private final Rectangle boundary = new Rectangle();
   List<Label> playerLabels = new ArrayList<>();
   List<ComboBox<String>> comboBoxes = new ArrayList<>();
   private int blueCirclesCount = 0;
   private int playerCircleCount = 0;
-  private final Rectangle boundary = new Rectangle();
   private List<Player> players; // List of players loaded from the CSV or other data source
 
   public static void main(String[] args) {
@@ -85,21 +80,21 @@ public class SquadBuilder extends Application {
 
   private void configureButtonArea(GridPane root) {
     Pane area1 = createPaneWithBackground();
-    Button myButton =
-            createStyledButton(event -> onFileChooserButtonClick());
+    Button myButton = createStyledButton(event -> onFileChooserButtonClick());
     myButton
-            .layoutXProperty()
-            .bind(area1.widthProperty().subtract(myButton.widthProperty()).divide(2));
+        .layoutXProperty()
+        .bind(area1.widthProperty().subtract(myButton.widthProperty()).divide(2));
     myButton
-            .layoutYProperty()
-            .bind(area1.heightProperty().subtract(myButton.heightProperty()).divide(2));
+        .layoutYProperty()
+        .bind(area1.heightProperty().subtract(myButton.heightProperty()).divide(2));
     area1.getChildren().add(myButton);
     root.add(area1, 0, 0);
   }
 
   private Pane createPaneWithBackground() {
     Pane pane = new Pane();
-    pane.setStyle("-fx-background-color: " + Constants.LIGHT_COLOR + "; -fx-background-radius: 10;");
+    pane.setStyle(
+        "-fx-background-color: " + Constants.LIGHT_COLOR + "; -fx-background-radius: 10;");
     return pane;
   }
 
@@ -118,6 +113,7 @@ public class SquadBuilder extends Application {
     createSoccerField(area2);
     root.add(area2, 1, 0, 1, 4);
   }
+
   private void createBoundary(Pane pane) {
 
     bindRectangleToPaneProportions(boundary, pane, 0.05, 0.05, 0.9, 0.9);
@@ -125,6 +121,7 @@ public class SquadBuilder extends Application {
     boundary.setFill(Color.web(LIGHT_COLOR));
     pane.getChildren().add(boundary);
   }
+
   private void createMidfieldLine(Pane pane) {
     Line midfieldLine = new Line();
     midfieldLine.startXProperty().bind(pane.widthProperty().multiply(0.05));
@@ -134,10 +131,12 @@ public class SquadBuilder extends Application {
     midfieldLine.setStroke(Color.web(DARK_COLOR));
     pane.getChildren().add(midfieldLine);
   }
+
   private void createGoalAreas(Pane pane) {
-    createGoalArea(pane, 0.05, true);
+    createGoalArea(pane, 0.85, true);
     createGoalArea(pane, 0.95, false);
   }
+
   private void createGoalArea(Pane pane, double yFactor, boolean fromTop) {
     Rectangle goalArea = new Rectangle();
     bindRectangleToPaneProportions(goalArea, pane, 0.3, fromTop ? yFactor : 1 - yFactor, 0.4, 0.1);
@@ -145,23 +144,34 @@ public class SquadBuilder extends Application {
     goalArea.setStroke(Color.web(DARK_COLOR));
     pane.getChildren().add(goalArea);
   }
+
   private void createPenaltyAreas(Pane pane) {
-    createPenaltyArea(pane, 0.05, true);
+    createPenaltyArea(pane, 0.75, true);
     createPenaltyArea(pane, 0.95, false);
   }
+
   private void createPenaltyArea(Pane pane, double yFactor, boolean fromTop) {
     Rectangle penaltyArea = new Rectangle();
-    bindRectangleToPaneProportions(penaltyArea, pane, 0.2, fromTop ? yFactor : 1 - yFactor, 0.6, 0.2);
+    bindRectangleToPaneProportions(
+        penaltyArea, pane, 0.2, fromTop ? yFactor : 1 - yFactor, 0.6, 0.2);
     penaltyArea.setFill(Color.TRANSPARENT);
     penaltyArea.setStroke(Color.web(DARK_COLOR));
     pane.getChildren().add(penaltyArea);
   }
-  private void bindRectangleToPaneProportions(Rectangle rect, Pane pane, double xFactor, double yFactor, double widthFactor, double heightFactor) {
+
+  private void bindRectangleToPaneProportions(
+      Rectangle rect,
+      Pane pane,
+      double xFactor,
+      double yFactor,
+      double widthFactor,
+      double heightFactor) {
     rect.xProperty().bind(pane.widthProperty().multiply(xFactor));
     rect.yProperty().bind(pane.heightProperty().multiply(yFactor));
     rect.widthProperty().bind(pane.widthProperty().multiply(widthFactor));
     rect.heightProperty().bind(pane.heightProperty().multiply(heightFactor));
   }
+
   private void createCenterCircle(Pane pane) {
     Circle centerCircle = new Circle();
     centerCircle.centerXProperty().bind(pane.widthProperty().divide(2));
@@ -171,46 +181,78 @@ public class SquadBuilder extends Application {
     centerCircle.setFill(Color.TRANSPARENT);
     pane.getChildren().add(centerCircle);
   }
+
   private void createPlayerPositions(Pane pane) {
     double[][] playerCirclePositions = {
-            {0.42, 0.2}, {0.5, 0.2}, {0.58, 0.2},       // Strikers
-            {0.42, 0.35}, {0.5, 0.35}, {0.58, 0.35},   // Attacking Midfielders
-            {0.1, 0.35}, {0.9, 0.35}, {0.1, 0.5}, {0.9, 0.5},  // Wing Midfielders
-            {0.42, 0.5}, {0.5, 0.5}, {0.58, 0.5},     // Central Midfielders
-            {0.42, 0.65}, {0.5, 0.65}, {0.58, 0.65},  // Defensive Midfielders
-            {0.1, 0.65}, {0.9, 0.65}, {0.1, 0.8}, {0.9, 0.8},  // Wingbacks
-            {0.42, 0.8}, {0.5, 0.8}, {0.58, 0.8},     // Defensive Centers
-            {0.5, 0.9}                                // Goalkeeper
+      {0.42, 0.2},
+      {0.5, 0.2},
+      {0.58, 0.2}, // Strikers
+      {0.42, 0.35},
+      {0.5, 0.35},
+      {0.58, 0.35}, // Attacking Midfielders
+      {0.1, 0.35},
+      {0.9, 0.35},
+      {0.1, 0.5},
+      {0.9, 0.5}, // Wing Midfielders
+      {0.42, 0.5},
+      {0.5, 0.5},
+      {0.58, 0.5}, // Central Midfielders
+      {0.42, 0.65},
+      {0.5, 0.65},
+      {0.58, 0.65}, // Defensive Midfielders
+      {0.1, 0.65},
+      {0.9, 0.65},
+      {0.1, 0.8},
+      {0.9, 0.8}, // Wingbacks
+      {0.42, 0.8},
+      {0.5, 0.8},
+      {0.58, 0.8}, // Defensive Centers
+      {0.5, 0.9} // Goalkeeper
     };
 
-    List<List<String>> playerPositions = Arrays.asList(
-            List.of("ST (C)"), List.of("ST (C)"), List.of("ST (C)"),  // Strikers
-            Arrays.asList("AM (RLC)", "AM (LC)", "AM (RC)"), Arrays.asList("AM (RLC)", "AM (LC)", "AM (RC)"), Arrays.asList("AM (RLC)", "AM (LC)", "AM (RC)"),  // Attacking Midfielders
-            Arrays.asList("AM (RLC)", "AM (LC)", "AM (L)", "M/AM (L)"),  // Wing Midfielders (AML)
-            Arrays.asList("AM (RLC)", "AM (RC)", "AM (R)", "M/AM (R)"),  // Wing Midfielders (AMR)
-            Arrays.asList("M (L)", "M/AM (L)"),  // Central Midfielders (WML)
-            Arrays.asList("M (R)", "M/AM (R)"),  // Central Midfielders (WMR)
-            Arrays.asList("M (C)", "M (RC)", "M (LC)", "M/AM"), Arrays.asList("M (C)", "M (RC)", "M (LC)", "M/AM"), Arrays.asList("M (C)", "M (RC)", "M (LC)", "M/AM"),  // Central Midfielders (CM)
-            List.of("DM"), List.of("DM"), List.of("DM"),  // Defensive Midfielders
-            List.of("WB (L)"),  // Wingback left
-            List.of("WB (R)"),  // Wingback right
-            Arrays.asList("D (L)", "D (RL)", "D (RLC)"),  // Wingbacks (DWL)
-            Arrays.asList("D (R)", "D (RL)", "D (RLC)"),  // Wingbacks (DWR)
-            List.of("D (C)"), List.of("D (C)"), List.of("D (C)"),  // Defensive Centers
-            List.of("GK")  // Goalkeeper
-    );
+    List<List<String>> playerPositions =
+        Arrays.asList(
+            List.of("ST (C)"),
+            List.of("ST (C)"),
+            List.of("ST (C)"), // Strikers
+            Arrays.asList("AM (RLC)", "AM (LC)", "AM (RC)"),
+            Arrays.asList("AM (RLC)", "AM (LC)", "AM (RC)"),
+            Arrays.asList("AM (RLC)", "AM (LC)", "AM (RC)"), // Attacking Midfielders
+            Arrays.asList("AM (RLC)", "AM (LC)", "AM (L)", "M/AM (L)"), // Wing Midfielders (AML)
+            Arrays.asList("AM (RLC)", "AM (RC)", "AM (R)", "M/AM (R)"), // Wing Midfielders (AMR)
+            Arrays.asList("M (L)", "M/AM (L)"), // Central Midfielders (WML)
+            Arrays.asList("M (R)", "M/AM (R)"), // Central Midfielders (WMR)
+            Arrays.asList("M (C)", "M (RC)", "M (LC)", "M/AM"),
+            Arrays.asList("M (C)", "M (RC)", "M (LC)", "M/AM"),
+            Arrays.asList("M (C)", "M (RC)", "M (LC)", "M/AM"), // Central Midfielders (CM)
+            List.of("DM"),
+            List.of("DM"),
+            List.of("DM"), // Defensive Midfielders
+            List.of("WB (L)"), // Wingback left
+            List.of("WB (R)"), // Wingback right
+            Arrays.asList("D (L)", "D (RL)", "D (RLC)"), // Wingbacks (DWL)
+            Arrays.asList("D (R)", "D (RL)", "D (RLC)"), // Wingbacks (DWR)
+            List.of("D (C)"),
+            List.of("D (C)"),
+            List.of("D (C)"), // Defensive Centers
+            List.of("GK") // Goalkeeper
+            );
 
     for (int i = 0; i < playerCirclePositions.length; i++) {
       double[] position = playerCirclePositions[i];
       Circle player = createPlayerCircle();
-      player.centerXProperty().bind(boundary.widthProperty().multiply(position[0]).add(boundary.xProperty()));
-      player.centerYProperty().bind(boundary.heightProperty().multiply(position[1]).add(boundary.yProperty()));
+      player
+          .centerXProperty()
+          .bind(boundary.widthProperty().multiply(position[0]).add(boundary.xProperty()));
+      player
+          .centerYProperty()
+          .bind(boundary.heightProperty().multiply(position[1]).add(boundary.yProperty()));
       pane.getChildren().add(player);
 
       // Adjust the roles in the map
       circleToRolesMap.put(player, playerPositions.get(i));
     }
-    }
+  }
 
   private Circle createPlayerCircle() {
     Circle circle = new Circle();
@@ -228,6 +270,7 @@ public class SquadBuilder extends Application {
 
     return circle;
   }
+
   private void configureSelectionArea(GridPane root) {
     Pane area3 = createPaneWithBackground();
 
@@ -237,30 +280,32 @@ public class SquadBuilder extends Application {
 
     // Add a listener to adjust ComboBox spacing when the area's height changes
     area3
-            .heightProperty()
-            .addListener((observable, oldValue, newValue) -> adjustComboBoxSpacing(comboBoxes, area3));
+        .heightProperty()
+        .addListener((observable, oldValue, newValue) -> adjustComboBoxSpacing(comboBoxes, area3));
   }
+
   private void configurePlayerListArea(GridPane root) {
     Pane area4 = createPaneWithBackground();
     addPlayerLabelsToArea4(area4);
     List<String> testNames =
-            Arrays.asList(
-                    "Alice",
-                    "Bob",
-                    "Charlie",
-                    "David",
-                    "Eve",
-                    "Fiona",
-                    "George",
-                    "Hannah",
-                    "Isaac",
-                    "Jennifer",
-                    "Kevin");
+        Arrays.asList(
+            "Position 1",
+            "Position 2",
+            "Position 3",
+            "Position 4",
+            "Position 5",
+            "Position 6",
+            "Position 7",
+            "Position 8",
+            "Position 9",
+            "Position 10",
+            "Position 11");
 
     updatePlayerLabels(testNames);
 
     root.add(area4, 0, 1, 1, 4);
   }
+
   private void handlePlayerCircleClick(Circle circle) {
     Color currentColor = (Color) circle.getFill();
     if (currentColor.equals(Color.web(DARK_COLOR)) && blueCirclesCount < 11) {
@@ -271,19 +316,19 @@ public class SquadBuilder extends Application {
       // New functionality
       List<String> positions = circleToRolesMap.get(circle);
       List<Player> playersForPosition =
-              players.stream()
-                      .filter(
-                              player -> {
-                                String[] playerPositions = player.getBasicInfo().getPosition().split(",\\s*");
-                                for (String pos : playerPositions) {
-                                  if (positions.contains(pos)
-                                          || positions.contains(player.getBasicInfo().getSecondaryPosition())) {
-                                    return true;
-                                  }
-                                }
-                                return false;
-                              })
-                      .collect(Collectors.toList());
+          players.stream()
+              .filter(
+                  player -> {
+                    String[] playerPositions = player.getBasicInfo().getPosition().split(",\\s*");
+                    for (String pos : playerPositions) {
+                      if (positions.contains(pos)
+                          || positions.contains(player.getBasicInfo().getSecondaryPosition())) {
+                        return true;
+                      }
+                    }
+                    return false;
+                  })
+              .collect(Collectors.toList());
 
       System.out.println("Checking for positions: " + positions);
       System.out.println("Number of players found: " + playersForPosition.size());
@@ -306,6 +351,7 @@ public class SquadBuilder extends Application {
       }
     }
   }
+
   private void adjustComboBoxSpacing(List<ComboBox<String>> comboBoxes, Pane container) {
     double comboBoxHeight = 25;
     int numberOfComboBoxes = comboBoxes.size();
@@ -322,17 +368,19 @@ public class SquadBuilder extends Application {
       comboBox.setLayoutY(yPos);
     }
   }
+
   private void configureComboBoxes(Pane container) {
     for (int i = 0; i < 11; i++) {
       ComboBox<String> comboBox = new ComboBox<>();
       comboBox
-              .layoutXProperty()
-              .bind(container.widthProperty().subtract(comboBox.widthProperty()).divide(2));
+          .layoutXProperty()
+          .bind(container.widthProperty().subtract(comboBox.widthProperty()).divide(2));
       comboBoxes.add(comboBox);
       styleComboBox(comboBox);
       container.getChildren().add(comboBox);
     }
   }
+
   private void populateNextAvailableComboBox(List<String> roles) {
     for (ComboBox<String> comboBox : comboBoxes) {
       if (comboBox.isDisable()) {
@@ -343,6 +391,7 @@ public class SquadBuilder extends Application {
       }
     }
   }
+
   private void addPlayerLabelsToArea4(Pane area4) {
 
     final int marginTop = 20;
@@ -361,11 +410,13 @@ public class SquadBuilder extends Application {
       label.setLayoutY(marginTop + i * 60);
     }
   }
+
   private void styleComboBox(ComboBox<String> comboBox) {
     comboBox.setStyle(COMBO_BOX_STYLE);
     comboBox.setEffect(shadow);
     comboBox.setDisable(true);
   }
+
   private void updatePlayerLabels(List<String> names) {
     for (int i = 0; i < playerLabels.size() && i < names.size(); i++) {
       playerLabels.get(i).setText(names.get(i));
@@ -381,40 +432,16 @@ public class SquadBuilder extends Application {
     createPlayerPositions(pane);
   }
 
-
-
-  private void onPositionClicked(MouseEvent event, List<String> positions) {
-    List<Player> playersForPosition =
-        players.stream()
-            .filter(
-                player -> {
-                  String[] playerPositions = player.getBasicInfo().getPosition().split(",\\s*");
-                  for (String pos : playerPositions) {
-                    if (positions.contains(pos)
-                        || positions.contains(player.getBasicInfo().getSecondaryPosition())) {
-                      return true;
-                    }
-                  }
-                  return false;
-                })
-            .collect(Collectors.toList());
-
-    System.out.println("Checking for positions: " + positions);
-    System.out.println("Number of players found: " + playersForPosition.size());
-
-    displayPlayersForPosition(playersForPosition, String.join("/", positions));
-  }
-
   private void displayPlayersForPosition(List<Player> playersForPosition, String position) {
-    Alert alert = new Alert(Alert.AlertType.INFORMATION);
-    alert.setTitle("Players for " + position);
-    alert.setHeaderText(null);
-    alert.setContentText(
-        playersForPosition.stream()
-            .map(player -> player.getBasicInfo().getName())
-            .collect(Collectors.joining(", ")));
-
-    alert.showAndWait();
+    if (blueCirclesCount <= playerLabels.size()) {
+      if (!playersForPosition.isEmpty()) {
+        playerLabels
+            .get(blueCirclesCount - 1)
+            .setText(playersForPosition.get(0).getBasicInfo().getName());
+      } else {
+        playerLabels.get(blueCirclesCount - 1).setText("No Player for " + position);
+      }
+    }
   }
 
   protected void onFileChooserButtonClick() {
@@ -453,6 +480,4 @@ public class SquadBuilder extends Application {
       return false;
     }
   }
-
 }
-
